--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,6 +7,12 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
+  },
+  "pnpm": {
+    "overrides": {
+      "react": "18.3.1",
+      "react-dom": "18.3.1"
+    }
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -38,9 +44,9 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
-    "@react-three/drei": "^10.7.6",
-    "@react-three/fiber": "^9.3.0",
-    "@types/three": "^0.180.0",
+    "@react-three/drei": "^9.108.3",
+    "@react-three/fiber": "^8.16.8",
+    "@types/three": "^0.165.0",
     "@vercel/analytics": "latest",
     "@vercel/speed-insights": "latest",
     "autoprefixer": "^10.4.20",
@@ -64,7 +70,7 @@
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.180.0",
+    "three": "^0.165.0",
     "vaul": "latest",
     "vue-router": "latest",
     "zod": "3.25.67"
